# Auto-EQ

./: CMakeLists.txt
Source/: BandEditorPanel.cpp  BandEditorPanel.h  BiquadFilter.cpp  BiquadFilter.h  ConvergenceEngine.cpp  ConvergenceEngine.h  CurveEditorWindow.cpp  CurveEditorWindow.h  EQBand.h  EQBank.cpp  EQBank.h  FFTAnalyzer.cpp  FFTAnalyzer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectrumDisplay.cpp  SpectrumDisplay.h  TargetCurve.cpp  TargetCurve.h
